# validated-struct-rs

./: Cargo.toml
examples/: example.rs
src/: lib.rs
validated_struct/: Cargo.toml
validated_struct/examples/: example.rs
validated_struct/src/: lib.rs
validated_struct_macros/: Cargo.toml
validated_struct_macros/src/: lib.rs  parsing.rs
