[package]
name = "validated_struct"
version = "0.1.6"
edition = "2018"
authors = ["Pierre Avital <pierre.avital@me.com>"]
description = "Easily generate nested structures with getters and predicated setters"
keywords = ["proc-macros"]
license = "EPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = "1.0"
validated_struct_macros = { path = "../validated_struct_macros/", version = "0.1.5", features = [
	"serde",
] }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
json5 = "0.3"
serde_json = "1.0"
